added table of live band members

--- a/index.html
+++ b/index.html
@@ -28,11 +28,48 @@
     </div>
 
     <div class="row">
-        <h2>About</h2>
-        <p><a href="#">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. Mauris aliquet malesuada feugiat. Curabitur fermentum bibendum nulla, non dictum ipsum tincidunt non. Quisque convallis pharetra tempor. Donec id pretium leo. Pellentesque luctus massa non elit viverra pellentesque. Cras vitae neque molestie, rhoncus ipsum sit amet, lobortis dui. Fusce in urna sem. Vivamus vehicula dignissim augue et scelerisque. Etiam quam nisi, molestie ac dolor in, tincidunt tincidunt arcu. Praesent sed justo finibus, fringilla velit quis, porta erat. Donec blandit metus ut arcu iaculis iaculis. Cras nec dolor fringilla justo ullamcorper auctor. Aliquam eget pretium velit. Morbi urna justo, pulvinar id lobortis in, aliquet placerat orci. Etiam nisi turpis, eleifend nec tellus id, efficitur pellentesque dolor. Proin vitae massa a augue sagittis vulputate. Duis vel fringilla magna, sit amet vestibulum enim. Fusce laoreet accumsan nisl eu sagittis. Morbi hendrerit sapien eget efficitur imperdiet. Aenean vitae nisl id est placerat congue a et nisi. Suspendisse vitae quam ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse eu risus lacus. Ut tristique libero eget est dictum, commodo malesuada orci elementum. Proin molestie eu mi in tempus.</p>
-        <h2>Albums</h2>
+        <div class="disclaimer">Information taken from the <a href="http://metroid.wikia.com/wiki/Metroid_Metal">Metroid Wiki</a>.</div>
+        <p>Metroid Metal is a fan site created by Grant "Stemage" Henry and devoted to the music of the Metroid series. He has taken some of the most well-known pieces of music from the series and kicked them up a notch by turning them into instrumental hard rock and metal renditions.</p>
+        <p>The majority of the tracks are performed entirely by Henry and his drum machine, he often collaborates with Dan Taylor playing bass guitar, and he has collaborated once with GOAT on <i>The Tunnel</i> from Metroid II, and with Daniel Brown in the Downed Frigate from Metroid Prime. Henry's brother Adam also provided drum parts for the Super Metroid ending.</p>
+        <p>The logo features Samus Aran's sprite from Metroid, holding a guitar. This may be a reference to the special unlockable ending in Tetris where she is seen playing a bass along with other Nindendo characters.</p>
+        <p>Grant Henry, Dan Taylor, and musicians from other video game music bands recently collaborated to perform live at MagFest VIII. They also performed live at the 2009 Penny Arcade Expo (PAX), and released a new studio album to supplement the performance, titled "Varia Suite."</p>
+        <table>
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>AKA</td>
+                    <td>Instrument</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Grant Henry</td>
+                    <td>Stemage</td>
+                    <td>Guitar</td>
+                </tr>
+                <tr>
+                    <td>Dan Behrens</td>
+                    <td>Danimal</td>
+                    <td>Guitar</td>
+                </tr>
+                <tr>
+                    <td>Micheal Molnar</td>
+                    <td>Kirby Pufocia</td>
+                    <td>Guitar</td>
+                </tr>
+                <tr>
+                    <td>Dan Taylor</td>
+                    <td>Chunckstyle</td>
+                    <td>Bass</td>
+                </tr>
+                <tr>
+                    <td>Kevin Lawrence</td>
+                    <td>Cheddar</td>
+                    <td>Drums</td>
+                </tr>
+            </tbody>
+        </table>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet malesuada feugiat. Curabitur fermentum bibendum nulla, non dictum ipsum tincidunt non. Quisque convallis pharetra tempor. Donec id pretium leo. Pellentesque luctus massa non elit viverra pellentesque. Cras vitae neque molestie, rhoncus ipsum sit amet, lobortis dui. Fusce in urna sem. Vivamus vehicula dignissim augue et scelerisque. Etiam quam nisi, molestie ac dolor in, tincidunt tincidunt arcu. Praesent sed justo finibus, fringilla velit quis, porta erat. Donec blandit metus ut arcu iaculis iaculis. Cras nec dolor fringilla justo ullamcorper auctor. Aliquam eget pretium velit. Morbi urna justo, pulvinar id lobortis in, aliquet placerat orci. Etiam nisi turpis, eleifend nec tellus id, efficitur pellentesque dolor. Proin vitae massa a augue sagittis vulputate. Duis vel fringilla magna, sit amet vestibulum enim. Fusce laoreet accumsan nisl eu sagittis. Morbi hendrerit sapien eget efficitur imperdiet. Aenean vitae nisl id est placerat congue a et nisi. Suspendisse vitae quam ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse eu risus lacus. Ut tristique libero eget est dictum, commodo malesuada orci elementum. Proin molestie eu mi in tempus.</p>
-        <h2>Form</h2>
         <form class="small-8 small-offset-2 columns" action="http://www.google.com">
             <div class="row">
                 <div class="small-12 columns">
@@ -42,7 +79,7 @@
                     <input type="email" placeholder="Email" />
                 </div>
                 <label for="fan" class="text-center">
-                    <input id="fan" type="checkbox" name="fan" style="text-align:center;"> I want to sign up for Fan Mail
+                    <input id="fan" type="checkbox" name="fan" style="text-align:center;">I want to sign up for Fan Mail
                 </label>
                 <input class="button round large small-6 small-offset-3" type="submit" value="Submit">
             </div>
