--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="imgwrapper small-12  medium-10 medium-offset-1">
+            <div class="band stemage"></div>
+            <div class="band danimal"></div>
+            <div class="band kirby"></div>
+            <div class="band chunckstyle"></div>
+            <div class="band cheddar"></div>
+            <img src="img/band.jpg" alt="Metroid Metal">
+        </div>
+
         <form class="small-10 small-offset-1 columns" action="http://www.google.com">
             <input type="text" placeholder="Name" />
             <input type="email" placeholder="Email" />
