Added more robust hover functionality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     </div>
     <div class="metroid"></div>
     <h1>Metroid Metal</h1>
-    </div>
 
     <div class="row">
         <div class="small-10 small-offset-1">
@@ -44,27 +43,27 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="stemage">
                     <td>Grant Henry</td>
                     <td>Stemage</td>
                     <td>Guitar</td>
                 </tr>
-                <tr>
-                    <td>Dan Behrens</td>
-                    <td>Danimal</td>
-                    <td>Guitar</td>
-                </tr>
-                <tr>
+                <tr class="kirby">
                     <td>Micheal Molnar</td>
                     <td>Kirby Pufocia</td>
                     <td>Guitar</td>
                 </tr>
-                <tr>
+                <tr class="danimal">
+                    <td>Dan Behrens</td>
+                    <td>Danimal</td>
+                    <td>Guitar</td>
+                </tr>
+                <tr class="chunckstyle">
                     <td>Dan Taylor</td>
                     <td>Chunckstyle</td>
                     <td>Bass</td>
                 </tr>
-                <tr>
+                <tr class="cheddar">
                     <td>Kevin Lawrence</td>
                     <td>Cheddar</td>
                     <td>Drums</td>
@@ -95,6 +94,7 @@
     <script>
         $(document).foundation();
     </script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
