--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <input class="button round large small-12 medium-8 medium-offset-2 large-6 large-offset-3" type="submit" value="Submit">
         </form>
     </div>
-    <script src="js/vendor/jquery.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
         $(document).foundation();
